fix(user-details): fix transaction link alignment

--- a/src/components/user/user-details.module.css
+++ b/src/components/user/user-details.module.css
@@ -5,10 +5,6 @@
 .transactions {
   flex-grow: 1;
 }
-.transactions a {
-  text-align: right;
-  display: block;
-}
 
 .payment {
   margin-bottom: 4rem;
